feat: add secure HTTP foundation
